--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "builds": [
-    { "src": "app.py", "use": "@vercel/python" },
     { "src": "backend/api.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/api.py" },
-    { "src": "/(.*)", "dest": "app.py" }
+    { "src": "/(.*)", "dest": "backend/api.py" }
   ]
 }
+
