--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "builds": [
-    { "src": "backend/api.py", "use": "@vercel/python" }
+    { "src": "api/chat.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "backend/api.py" }
+    { "src": "/api/chat", "dest": "api/chat.py" }
   ]
 }
-
