--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "builds": [
     { "src": "api/chat.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "api/chat.py" }
   ]
 }
