--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,12 @@
   "builds": [
     { 
       "src": "api/chat.py", 
-      "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.9" 
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     { 
       "src": "/api/chat", 
-      "dest": "api/chat.py" 
-    },
-    { 
-      "src": "/", 
       "dest": "api/chat.py" 
     }
   ]
